--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <p class="copyright-text">&copy; 2020 <a href="https://narava.com">Narava Restaurant</a>. All Rights Reserved</p>
+            <p class="copyright-text">&copy; 2020 <a href="https://naravarestaurants.com">Narava Restaurant</a>. All Rights Reserved</p>
           </div>
           <div class="col-md-4">
             <ul class="probootstrap-footer-social right">
