--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
+        
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pinyon+Script" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles-merged.css">
+    <link rel="stylesheet" href="css/style.css">
+
+
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
@@ -43,7 +49,7 @@
 
     <section class="flexslider" data-section="welcome">
       <ul class="slides">
-        <li style="background-image: url(img/_DSC0177.jpg)" class="overlay" data-stellar-background-ratio="0.5">
+        <li style="background-image: url(img/food_image_1.jpg)" class="overlay" data-stellar-background-ratio="0.5">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
@@ -56,7 +62,7 @@
             </div>
           </div>
         </li>
-        <li style="background-image: url(img/_DSC0144.jpg)" class="overlay">
+        <li style="background-image: url(img/food_image_2.jpg)" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
@@ -70,7 +76,7 @@
           </div>
           
         </li>
-        <li style="background-image: url(img/_DSC0130.jpg)" class="overlay">
+        <li style="background-image: url(img/food_image_3.jpg)" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
@@ -100,14 +106,14 @@
             <p><a href="#deliveries" class="probootstrap-custom-link">Get A Dish</a></p>
           </div>
           <div class="col-md-6 col-md-push-1 probootstrap-animate">
-            <p><img src="img/_DSC0177.jpg" alt="Narava Restaurant Image" class="img-responsive"></p>
+            <p><img src="img/food_image_1.jpg" alt="Narava Restaurant Image" class="img-responsive"></p>
           </div>
         </div>
         <!-- END row -->
       </div>
     </section>
 
-    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_4.jpg);"  data-stellar-background-ratio="0.5"  data-section="menu">
+    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_2.jpg);"  data-stellar-background-ratio="0.5"  data-section="menu">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center probootstrap-animate">
@@ -199,7 +205,7 @@
       </div>
     </section>
 
-    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_5.jpg);"  data-stellar-background-ratio="0.5" data-section="catering">
+    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_1.jpg);"  data-stellar-background-ratio="0.5" data-section="catering">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center probootstrap-animate">
@@ -326,7 +332,7 @@
     </section>
 
     <!-- Edit -->
-    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_7.jpg);"  data-stellar-background-ratio="0.5" data-section="deliveries">
+    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_3.jpg);"  data-stellar-background-ratio="0.5" data-section="deliveries">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center probootstrap-animate">
