--- a/index.html
+++ b/index.html
@@ -134,35 +134,28 @@
               <li>
                 <figure class="image"><img src="img/img_square_1.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Fried Potatoes with Garlic</h3>
+                  <span class="price">Kshs 1,000</span>
+                  <h3>Rava Fillet Steak</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
               <li>
                 <figure class="image"><img src="img/img_square_2.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Tuna Roast Source</h3>
+                  <span class="price">Kshs. 800</span>
+                  <h3>Fish Fillet</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
               <li>
                 <figure class="image"><img src="img/img_square_3.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Roast Beef (4 sticks)</h3>
+                  <span class="price">Kshs. 650</span>
+                  <h3>Barafa Beef Stew</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
-              <li>
-                <figure class="image"><img src="img/img_square_4.jpg" alt="Narava Restaurant Image"></figure>
-                <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Salted Fried Chicken</h3>
-                  <p>Crab / Potatoes / Rice</p>
-                </div>
-              </li>
+              
             </ul>
           </div>
           <div class="col-md-6">
@@ -170,35 +163,28 @@
               <li>
                 <figure class="image"><img src="img/img_square_5.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Baked Potato Pizza</h3>
+                  <span class="price">Kshs. 800</span>
+                  <h3>Chicken Parilla</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
               <li>
                 <figure class="image"><img src="img/img_square_1.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Fried Potatoes with Garlic</h3>
+                  <span class="price">Kshs. 800</span>
+                  <h3>Grilled Beef Devaea</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
               <li>
-                <figure class="image"><img src="img/img_square_2.jpg" alt="Narava Restaurant Image"></figure>
+                <figure class="image"><img src="img/img_square_4.jpg" alt="Narava Restaurant Image"></figure>
                 <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Salted Fried Chicken</h3>
+                  <span class="price">Kshs. 850</span>
+                  <h3>Grilled Lamb Special</h3>
                   <p>Crab / Potatoes / Rice</p>
                 </div>
               </li>
-              <li>
-                <figure class="image"><img src="img/img_square_3.jpg" alt="Narava Restaurant Image"></figure>
-                <div class="text">
-                  <span class="price">$22.99</span>
-                  <h3>Tuna Roast Source</h3>
-                  <p>Crab / Potatoes / Rice</p>
-                </div>
-              </li>
+              
             </ul>
           </div>
         </div>
