--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p><a href="#deliveries" class="probootstrap-custom-link">Get A Dish</a></p>
           </div>
           <div class="col-md-6 col-md-push-1 probootstrap-animate">
-            <p><img src="img/food_image_1.jpg" alt="Narava Restaurant Image" class="img-responsive"></p>
+            <p><img src="img/image_01.jpg" alt="Narava Restaurant Image" class="img-responsive"></p>
           </div>
         </div>
         <!-- END row -->
