Added packages text

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Narava Restaurant</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-
-        
+    <meta name="title" content="Narava Restaurant">
+    <meta name="description" content="Narava means nature, because we are
+      based in a serene environment. Narava
+      Ngong is a family-based restaurant that is
+      focused on providing life-changing
+      experiences around a table.">
+   
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pinyon+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.css">
@@ -449,9 +451,9 @@
             <div class="probootstrap-block-image">
               <figure><img src="img/food_image_1.jpg" alt="Narava Restaurant Image"></figure>
               <div class="text">
-                <span class="date">Package One</span>
+                <span class="date">Private Function</span>
                 <h3><a href="#">Laboriosam Quod Dignissimos</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p>Private function for 20-30 people 29,500ksh includes: room and a complete three-course meal</p>
                 <p class=""><a href="#deliveries" class="probootstrap-custom-link link-sm">Order</a></p>
               </div>
             </div>
@@ -462,7 +464,7 @@
               <div class="text">
                 <span class="date">Package Two</span>
                 <h3><a href="#">Laboriosam Quod Dignissimos</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p>Private party 9,999 includes: the room and a free 1kg cake.</p>
                 <p class=""><a href="#deliveries" class="probootstrap-custom-link link-sm">Order</a></p>
               </div>
             </div>
@@ -473,7 +475,7 @@
               <div class="text">
                 <span class="date">Package Three</span>
                 <h3><a href="#">Laboriosam Quod Dignissimos</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p>Dinner party for eight 6950 includes: complete three-course meal &amp; a fully set table for eight..</p>
                 <p class=""><a href="#deliveries" class="probootstrap-custom-link link-sm">Order</a></p>
               </div>
             </div>
