--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Narava Restaurant</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Narava Restaurant">
@@ -51,7 +52,7 @@
 
     <section class="flexslider" data-section="welcome">
       <ul class="slides">
-        <li style="background-image: url(img/food_image_1.jpg)" class="overlay" data-stellar-background-ratio="0.5">
+        <li style="background-image: url(img/food_image_4.jpg)" class="overlay" data-stellar-background-ratio="0.5">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
@@ -449,7 +450,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-4 probootstrap-animate">
             <div class="probootstrap-block-image">
-              <figure><img src="img/package_1.jpg" alt="Narava Restaurant Image"></figure>
+              <figure><img src="img/image_01.jpg" alt="Narava Restaurant Image"></figure>
               <div class="text">
                 <span class="date">Private Package</span>
                 <h3><a href="#catering">Free 1kg Cake + Elegant Room</a></h3>
