Added one more pic

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-4 probootstrap-animate">
             <div class="probootstrap-block-image">
-              <figure><img src="img/package_1.jpg" alt="Narava Restaurant Image"></figure>
+              <figure><img src="img/image_02.jpg" alt="Narava Restaurant Image"></figure>
               <div class="text">
                 <span class="date">Private Package</span>
                 <h3><a href="#catering">Free 1kg Cake + Elegant Room</a></h3>
