Changed brand tag line

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
                   <h1 class="primary-heading">Welcome</h1>
                   <h3 class="secondary-heading">Narava Restaurant</h3>
-                  <p class="sub-heading">Life Tastes Better At Narava</a></p>
+                  <p class="sub-heading">Not Just A Meal</a></p>
                 </div>
               </div>
             </div>
