Added new images to website

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
     </section>
 
-    <section class="probootstrap-section-bg overlay" style="background-image: url(img/food_image_11.jpg);"  data-stellar-background-ratio="0.5" data-section="catering">
+    <section class="probootstrap-section-bg overlay" style="background-image: url(img/_DSC8819.JPG);"  data-stellar-background-ratio="0.5" data-section="catering">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center probootstrap-animate">
@@ -447,7 +447,7 @@
           </div>
           <div class="col-md-4 col-sm-4 probootstrap-animate">
             <div class="probootstrap-block-image">
-              <figure><img src="img/food_image_14.jpg" alt="Narava Restaurant Image"></figure>
+              <figure><img src="img/_DSC8842.JPG" alt="Narava Restaurant Image"></figure>
               <div class="text">
                 <span class="date">Executive Package</span>
                 <h3><a href="#catering">Three Course Meal + Room</a></h3>
