Updated email address

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     <label for="name">Name</label>
                     <div class="form-field">
                       <i class="icon icon-user2"></i>
-                       <input type="hidden" id="email" name="_replyto" value="naravangong@gmail.com">
+                       <input type="hidden" id="email" name="_replyto" value="naravarestaurant@gmail.com">
                       <input type="text" name="name" id="name" class="form-control" placeholder="Your full name">
                     </div>
                   </div>
@@ -497,7 +497,7 @@
               <li><a href="tel:+254769585215"><i class="icon-phone"></i> +254 769 585 215</a></li>
               <li><a href="https://www.facebook.com/narava.ngong"><i class="icon-facebook"></i> narava.ngong</a></li>
               <li><a href="https://www.instagram.com/narava.ngong/"><i class="icon-instagram"></i> narava.ngong</a></li>
-              <li><a href="mailto:naravangong@gmail.com"><i class="icon-mail"></i> naravangong@gmail.com</a></li>
+              <li><a href="mailto:naravarestaurant@gmail.com"><i class="icon-mail"></i> naravarestaurant@gmail.com</a></li>
             </ul>
           </div>
           
