Changed instagram link

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             <ul style="margin-left:10px; margin-right:10px;" class="list-unstyled probootstrap-contact-social text-left">
               <li><a href="tel:+254769585215"><i class="icon-phone"></i> +254 769 585 215</a></li>
               <li><a href="https://www.facebook.com/narava.ngong"><i class="icon-facebook"></i> narava.ngong</a></li>
-              <li><a href="https://www.instagram.com/narava.ngong/"><i class="icon-instagram"></i> narava.ngong</a></li>
+              <li><a href="https://www.instagram.com/narava.restaurants/"><i class="icon-instagram"></i> narava.restaurants</a></li>
               <li><a href="mailto:naravarestaurant@gmail.com"><i class="icon-mail"></i> naravarestaurant@gmail.com</a></li>
             </ul>
           </div>
